Remove dependency-scope workarounds
(cherry picked from commit 2e949cf1716cbf44b1c59fdaad3de13ee71a250d)
(cherry picked from commit fdef148b009b7441511f16366fcb7ffeabea8e36)